# anime-games-launcher

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  GAMES_INTEGRATION.md  README.md  flake.nix  garnix.yaml  locales.py  perf.sh  shell.nix
crates/agl-core/: Cargo.toml  README.md
crates/agl-core/src/: buffer.rs  lib.rs  rw_sync.rs  tasks.rs
crates/agl-core/src/archives/: format.rs  mod.rs  sevenz.rs  tar.rs  zip.rs
crates/agl-core/src/compression/: algorithm.rs  compressor.rs  decompressor.rs  error.rs  level.rs  mod.rs  tests.rs
crates/agl-core/src/hashes/: algorithm.rs  hasher.rs  mod.rs  tests.rs
crates/agl-core/src/network/: downloader.rs  mod.rs
crates/agl-games/: Cargo.toml  README.md
crates/agl-games/src/: lib.rs  platform.rs
crates/agl-games/src/api/: actions_pipeline.rs  game_components.rs  game_edition.rs  game_launch_info.rs  game_settings.rs  game_variant.rs  mod.rs  pipeline_action.rs  progress_report.rs  tools_buttons.rs
crates/agl-games/src/engine/: game_settings.rs
crates/agl-games/src/manifest/: game.rs  game_info.rs  game_tag.rs  mod.rs  package_info.rs  registry.rs
crates/agl-locale/: Cargo.toml
crates/agl-locale/src/: bundle.rs  lib.rs  string.rs
crates/agl-packages/: Cargo.toml  README.md
crates/agl-packages/src/: format.rs  hash.rs  lib.rs  lock.rs  package.rs  storage.rs  tests.rs
crates/agl-packages/tests/cycle/: package_1.json  package_2.json
crates/agl-packages/tests/duplicate_input_output/: package.json
crates/agl-packages/tests/nested_packages/: package_2.json  package_3.json
crates/agl-packages/tests/self_reference/: package.json
crates/agl-packages/tests/simple_no_inputs/: example_7z.7z  package.json
crates/agl-packages/tests/simple_no_outputs/: example_tar.tar  example_tar_zstd.tar.zstd  package.json
crates/agl-runtime/: Cargo.toml  README.md
crates/agl-runtime/docs/: 01_string_api.md  03_task_api.md  04_system_api.md  05_filesystem_api.md  06_http_api.md  07_downloader_api.md  08_archive_api.md  09_hash_api.md  10_compression_api.md  10_sqlite_api.md  10_torrent_api.md  11_torrent_api.md  12_portal_api.md  12_protobuf_api.md  12_torrent_api.md  13_process_api.md  13_torrent_api.md  14_portal_api.md  14_process_api.md  15_secrets_api.md  1_string_api.md  3_task_api.md  4_network_api.md  5_http_api.md  8_compression_api.md  8_hash_api.md  9_compression_api.md  README.md  bytes.md
crates/agl-runtime/src/: allow_list.rs  lib.rs  module.rs  runtime.rs  scopes_list.rs  tests.rs
crates/agl-runtime/src/api/: archive_api.rs  bytes.rs  compression_api.rs  downloader_api.rs  filesystem_api.rs  hash_api.rs  http_api.rs  mod.rs  network_api.rs  path_api.rs  portal_api.rs  process_api.rs  protobuf_api.rs  secrets_api.rs  sqlite_api.rs  string_api.rs  system_api.rs  task_api.rs  torrent_api.rs
crates/agl-runtime/tests/dependency_module/: module_2.luau  package.json
crates/agl-runtime/tests/nested_package/: module_2.luau  package_1.json  package_2.json
crates/agl-runtime/tests/simple_module/: module.luau
crates/agl-runtime/tests/simple_package/: module.luau  package.json
crates/anirun/: Cargo.toml  README.md
crates/anirun/src/: main.rs
launcher/: CHANGELOG.md  Cargo.toml  README.md  build.rs
launcher/assets/: resources.xml
launcher/assets/locales/: common.ftl  error_messages.toml  game_tags.toml  interface.toml
launcher/assets/locales/de/: dialogs.ftl  loading.ftl  main.ftl  preferences.ftl  tasks.ftl
launcher/assets/locales/en/: details.ftl  dialogs.ftl  errors.ftl  main.ftl
launcher/assets/locales/pt/: addons.ftl  details.ftl  errors.ftl  loading.ftl
launcher/assets/locales/ru/: main.ftl  tasks.ftl
launcher/assets/locales/uk/: dialogs.ftl
launcher/assets/locales/zh-cn/: details.ftl  loading.ftl
launcher/src/: cache.rs  config.rs  consts.rs  game.rs  games.rs  i18n.rs  main.rs
launcher/src/cache/: mod.rs
launcher/src/config/generations/: mod.rs
launcher/src/core/: json.rs
launcher/src/core/archives/: sevenz.rs  tar.rs  zip.rs
launcher/src/core/network/: mod.rs
launcher/src/games/engine/v1_standard/: game_settings.rs  game_variant.rs  pipeline_action.rs  progress_report.rs
launcher/src/games/manifest/: game.rs
launcher/src/games/registry/: mod.rs
launcher/src/generations/generation/: manifest.rs
launcher/src/ui/: dialogs.rs  mod.rs
launcher/src/ui/components/: card.rs  cards_grid.rs  cards_list.rs  game_actions_pipeline.rs  game_actions_schedule.rs  game_library_details.rs  game_store_details.rs  game_tags.rs  graph.rs  lazy_picture.rs  maintainers_row.rs  mod.rs  picture_carousel.rs
launcher/src/ui/windows/: about.rs  download_manager.rs  game_running.rs  game_settings.rs  mod.rs  pipeline_actions.rs
launcher/src/ui/windows/main_window/: downloads_page.rs  library_page.rs  mod.rs  store_page.rs
launcher/tests/components/: README.md  integration.lua  package.json  variant.json
launcher/tests/games/: README.md
runtime/: Cargo.toml  README.md
runtime/docs/: 10_portal_api.md  10_torrent_api.md  11_process_api.md  1_strings_api.md  2_path_api.md  2_paths_api.md  3_filesystem_api.md  4_network_api.md  7_hash_api.md  README.md  portals_api.md
runtime/src/: allow_list.rs  hash.rs  lib.rs  manifest.rs  module.rs  runtime.rs  tests.rs
runtime/src/api/: archive_api.rs  archives_api.rs  compression_api.rs  downloader_api.rs  filesystem_api.rs  hash_api.rs  hashes_api.rs  mod.rs  network_api.rs  path_api.rs  portal_api.rs  portals_api.rs  process_api.rs  sqlite_api.rs  string_api.rs  sync_api.rs  torrent_api.rs
runtime/src/engine/: mod.rs
runtime/src/engine/api/: archives_api.rs  compression_api.rs  downloader_api.rs  filesystem_api.rs  hashes_api.rs  mod.rs  network_api.rs  path_api.rs  portals_api.rs  process_api.rs  sqlite_api.rs  string_api.rs  sync_api.rs
runtime/src/runtime/: mod.rs
runtime/src/runtime/authority/: manifest.rs  mod.rs
runtime/src/runtime/engine/: mod.rs
runtime/tests/dependency_module/: module_1.luau
runtime/tests/nested_package/: module_1.luau  module_2.luau  package_2.json
runtime/tests/simple_package/: module.luau
(+384 files in other folders)
