[package]
name = "anime-games-launcher"
version = "1.1.0-dev"
description = "Anime Games Launcher"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/anime-games-launcher"
repository = "https://github.com/an-anime-team/anime-games-launcher"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"

[features]
mimalloc = ["dep:mimalloc"]

default = ["mimalloc"]

[build-dependencies]
glib-build-tools = "0.20.0"

[dependencies.relm4]
version = "0.9.0"
features = ["macros", "libadwaita"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.2"
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.0"
features = ["v1_5"]

[dependencies]
mimalloc = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.5"
flume = "0.11"
bufreaderwriter = "0.2.4"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
reqwest = { version = "0.12", features = ["stream"] }
mlua = { version = "0.9.9", features = ["luau-jit", "serialize"] }

rand = "0.8.5"

seahash = "4.1.0"
crc32fast = "1.4.2"
crc32c = "0.6.8"
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64", "xxh3"] }
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"

hex = "0.4.3"
base32 = "0.5.1"
base64 = "0.22.1"
encoding_rs = "0.8.34"

tracing = "0.1"
tracing-subscriber = "0.3"
human-panic = "2.0"

fluent-templates = "0.11"
unic-langid = "0.9"
