[package]
name = "anime-games-launcher"
version = "2.0.0-dev"
description = "Anime Games Launcher"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/anime-games-launcher"
repository = "https://github.com/an-anime-team/anime-games-launcher"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"

[features]
mimalloc = ["dep:mimalloc"]

default = ["mimalloc"]

[build-dependencies]
glib-build-tools = "0.20.0"

[dependencies.relm4]
version = "0.9.0"
features = ["macros", "libadwaita"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.2"
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.0"
features = ["v1_5"]

[dependencies]
mimalloc = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.5"
once_cell = "1.20"
flume = "0.11"
bufreaderwriter = "0.2.4"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
reqwest = { version = "0.12", features = ["stream", "socks", "rustls-tls", "brotli", "deflate", "gzip"] }
mlua = { version = "0.9", features = ["luau-jit", "serialize"] }

rand = "0.8"
time = "0.3"
os_info = "3.8"

seahash = "4.1"
crc32fast = "1.4"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
md-5 = { version = "0.10", features = ["asm"] }
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }

hex = "0.4"
base32 = "0.5"
base64 = "0.22"
encoding_rs = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"
human-panic = "2.0"

fluent-templates = "0.11"
unic-langid = "0.9"
