[package]
name = "anime-games-launcher"
version = "2.0.0-alpha2"
description = "Anime Games Launcher"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/anime-games-launcher"
repository = "https://github.com/an-anime-team/anime-games-launcher"
license = "GPL-3.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"

[features]
mimalloc = ["dep:mimalloc"]

default = ["mimalloc"]

[build-dependencies]
glib-build-tools = "0.20.0"

[dependencies.relm4]
version = "0.9.1"
features = ["macros", "libadwaita"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.6"
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
features = ["v1_5"]

[dependencies.reqwest]
package = "reqwest"
version = "0.12"
default-features = false
features = [
    "charset",
    "brotli",
    "deflate",
    "gzip",
    "http2",
    "stream",
    "socks",
    "rustls-tls",
    "rustls-tls-native-roots"
]

[dependencies]
mimalloc = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yml = "0.0.12"

anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.5"
once_cell = "1.21"
flume = "0.11"

notify-rust = "4.11"
rfd = "0.15"

tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
mlua = { version = "0.10", features = ["luau-jit", "serialize", "send", "error-send"] }

bufreaderwriter = "0.2.4"
rusqlite = { version = "0.34", features = ["bundled"] }

rand = "0.9"
time = "0.3"
os_info = "3.10"

seahash = "4.1"
crc32fast = "1.4"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
md-5 = { version = "0.10", features = ["asm"] }
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }

hex = "0.4"
base32 = "0.5"
base64 = "0.22"
encoding_rs = "0.8"

lz4_flex = "0.11"
bzip2 = { version = "0.5", features = ["libbz2-rs-sys"] }
flate2 = { version = "1.1", features = ["zlib-rs"] }
zstd = { version = "0.13", features = ["fat-lto"] }
lzma-rust = "0.1.7"

tracing = "0.1"
tracing-subscriber = "0.3"
human-panic = "2.0"

fluent-templates = "0.11"
unic-langid = "0.9"
