[package]
name = "anime-games-launcher"
version = "2.0.0-alpha2"
description = "Anime Games Launcher"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/anime-games-launcher"
repository = "https://github.com/an-anime-team/anime-games-launcher"
license = "GPL-3.0-or-later"
edition = "2024"
build = "build.rs"
publish = false

[features]
mimalloc = ["dep:mimalloc"]

default = ["mimalloc"]

[build-dependencies]
glib-build-tools = "0.20.0"

[dependencies.relm4]
version = "0.9.1"
features = ["macros", "libadwaita"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.6"
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
features = ["v1_5"]

[dependencies]
agl-core = { path = "../core" }
agl-packages = { path = "../packages" }
agl-runtime = { path = "../runtime" }
agl-games = { path = "../games" }

anyhow = "1.0"
lazy_static = "1.5"
toml = "0.9"

tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs", "io-std"] }

time = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"
human-panic = "2.0"

# Mimalloc
mimalloc = { version = "0.1", optional = true }
