[package]
name = "agl-runtime"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
tracing = [
    "dep:tracing",
    "agl-core/tracing"
]

default = ["tracing"]

[dependencies.agl-core]
path = "../core"
default-features = false
features = [
    "tasks",
    "network-all",
    "archives-all",
    "hashes-all",
    "compression-all"
]

[dependencies.mlua]
package = "mlua"
version = "0.10"
features = ["luau-jit", "serialize", "send", "error-send"]

[dependencies]
thiserror = "1.0"
rand = "0.9"
seahash = "4.1"
base32 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = { version = "0.1", optional = true }

# Luau engine
bufreaderwriter = "0.2.4"
rusqlite = { version = "0.37", features = ["bundled"] }

toml = "0.9"
serde_yml = "0.0.12"

hex = "0.4"
base64 = "0.22"
encoding_rs = "0.8"
