[package]
name = "agl-runtime"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
tracing = [
    "dep:tracing",
    "agl-core/tracing",
    "agl-packages/tracing"
]

packages-support = ["dep:agl-packages"]

default = [
    "tracing",
    "packages-support"
]

[dependencies.agl-core]
path = "../core"
default-features = false
features = [
    "tasks",
    "network-all",
    "archives-all",
    "hashes-all",
    "compression-all"
]

[dependencies.agl-packages]
path = "../packages"
default-features = false
optional = true

[dependencies]
thiserror = "1.0"
lazy_static = "1.5"
unic-langid = "0.9"

# Tracing
tracing = { version = "0.1", optional = true }

# Luau engine
mlua = { version = "0.10", features = ["luau-jit", "serialize", "send", "error-send"] }
bufreaderwriter = "0.2.4"
rusqlite = { version = "0.37", features = ["bundled"] }

toml = "0.9"
serde_json = "1.0"
serde_yml = "0.0.12"

rand = "0.9"
seahash = "4.1"

hex = "0.4"
base32 = "0.5"
base64 = "0.22"
encoding_rs = "0.8"
