[package]
name = "agl-games"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[dependencies]
agl-locale = { path = "../agl-locale" }

thiserror = "1.0"
lazy_static = "1.5"
serde_json = "1.0"

os_info = "3.14"

mlua = { version = "0.11", features = ["luau-jit"] }
