[package]
name = "agl-locale"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
json = ["dep:serde_json"]
mlua = ["dep:mlua"]

default = ["json", "mlua"]

[dependencies]
lazy_static = "1.5"
unic-langid = "0.9"

toml = "0.9"
serde_json = { version = "1.0", optional = true }
mlua = { version = "0.10", features = ["luau-jit"], optional = true }
