[package]
name = "agl-packages"
version = "0.1.1"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
tracing = [
    "agl-core/tracing",
    "dep:tracing"
]

default = ["tracing"]

[dependencies.agl-core]
path = "../agl-core"
default-features = false
features = [
    "tasks",
    "network-downloader",
    "archives-all"
]

[dependencies]
thiserror = "1.0"
fastrand = "2.4"
seahash = "4.1"
base32 = "0.5"
serde_json = "1.0"

# Tracing
tracing = { version = "0.1", optional = true }
