[package]
name = "agl-packages"
version = "0.1.1"
authors = ["Nikita Podvirnyi <krypt0nn@dawn.wine>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
tracing = [
    "agl-core/tracing",
    "dep:tracing"
]

default = ["tracing"]

[dependencies.agl-core]
path = "../agl-core"
default-features = false
features = [
    "tasks",
    "network-downloader",
    "archives-all"
]

[dependencies]
thiserror = "1.0"
fastrand = "2.4"
blake3 = "1.8"
base32 = "0.5"
nix-base32 = "0.2.0"
serde_json = "1.0"

# Tracing
tracing = { version = "0.1", optional = true }
