[package]
name = "anirun"
version = "0.1.0"
description = "Anime Games Launcher runtime modules CLI"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/anime-games-launcher"
repository = "https://github.com/an-anime-team/anime-games-launcher"
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
mimalloc = ["dep:mimalloc"]

default = ["mimalloc"]

[dependencies.agl-core]
path = "../agl-core"
features = [
    "tasks",
    "network-all",
    "tracing"
]
default-features = false

[dependencies]
agl-locale = { path = "../agl-locale", default-features = false }
agl-packages = { path = "../agl-packages" }
agl-runtime = { path = "../agl-runtime" }

clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"

notify-rust = "4.11"

tracing = "0.1"
tracing-subscriber = "0.3"

# Mimalloc
mimalloc = { version = "0.1", optional = true }
